fixes alignment when no prev/next buttons

--- a/client/components/Car.scss
+++ b/client/components/Car.scss
@@ -26,7 +26,6 @@
   }
 
   button {
-    margin-top: 1.5em;
     background-color: transparent;
     border-color: transparent;
     
@@ -82,6 +81,7 @@
   padding: 0.5em;
   box-shadow: 1px 1px 1px 2px lighten(gray, 20%);
   border-radius: 0.2em;
+  margin-bottom: 1.5em;
 }
 
 .carPhotos {
